# readwise-to-apple-notes

./: .gitignore  README.md  pyproject.toml
readwise_apple_notes/: cli.py  utils.py
readwise_to_apple_notes/: cli.py  utils.py
src/readwise_to_apple_notes/: utils.py
tests/: __init__.py  test_cli.py
