[project]
name = "readwise-to-apple-notes"
version = "0.1.0"
description = "Export Readwise highlights to Apple Notes."
authors = [{ name = "Scott Carvalho", email = "scottcarvalho71@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
    "click>=8.1.7,<9",
    "readwise>=1.1.0,<2",
    "python-dotenv>=1.0.1,<2",
]

[project.urls]
Homepage = "https://github.com/Scarvy/readwise-to-apple-notes"
Changelog = "https://github.com/Scarvy/readwise-to-apple-notes/releases"
Issues = "https://github.com/Scarvy/readwise-to-apple-notes/issues"
CI = "https://github.com/Scarvy/readwise-to-apple-notes/actions"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "ruff>=0.12.11",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
